@@ -28,7 +28,6 @@ import org.thingsboard.server.service.install.InstallScripts;
 
 import javax.servlet.http.HttpServletRequest;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -56,7 +55,20 @@ public class DefaultEdgeInstallService implements EdgeInstallService {
     private String appVersion;
 
     @Override
-    public EdgeInstallInstructions getDockerInstallInstructions(TenantId tenantId, Edge edge, HttpServletRequest request) {
+    public EdgeInstallInstructions getInstallInstructions(TenantId tenantId, Edge edge, String installationMethod, HttpServletRequest request) {
+        switch (installationMethod.toLowerCase()) {
+            case "docker":
+                return getDockerInstallInstructions(edge, request);
+            case "ubuntu":
+                return getUbuntuInstallInstructions(edge, request);
+            case "centos":
+                return getCentosInstallInstructions(edge, request);
+            default:
+                throw new IllegalArgumentException("Unsupported installation method for Edge: " + installationMethod);
+        }
+    }
+
+    private EdgeInstallInstructions getDockerInstallInstructions(Edge edge, HttpServletRequest request) {
         String dockerInstallInstructions = readFile(resolveFile("docker", "instructions.md"));
         String baseUrl = request.getServerName();
         if (baseUrl.contains("localhost") || baseUrl.contains("127.0.0.1")) {
@@ -70,16 +82,40 @@ public class DefaultEdgeInstallService implements EdgeInstallService {
         String edgeVersion = appVersion + "EDGE";
         edgeVersion = edgeVersion.replace("-SNAPSHOT", "");
         dockerInstallInstructions = dockerInstallInstructions.replace("${TB_EDGE_VERSION}", edgeVersion);
-        dockerInstallInstructions = dockerInstallInstructions.replace("${CLOUD_ROUTING_KEY}", edge.getRoutingKey());
-        dockerInstallInstructions = dockerInstallInstructions.replace("${CLOUD_ROUTING_SECRET}", edge.getSecret());
-        dockerInstallInstructions = dockerInstallInstructions.replace("${CLOUD_RPC_PORT}", Integer.toString(rpcPort));
-        dockerInstallInstructions = dockerInstallInstructions.replace("${CLOUD_RPC_SSL_ENABLED}", Boolean.toString(sslEnabled));
+        dockerInstallInstructions = replacePlaceholders(dockerInstallInstructions, edge);
         return new EdgeInstallInstructions(dockerInstallInstructions);
+    }
+
+    private EdgeInstallInstructions getUbuntuInstallInstructions(Edge edge, HttpServletRequest request) {
+        String ubuntuInstallInstructions = readFile(resolveFile("ubuntu", "instructions.md"));
+        ubuntuInstallInstructions = replacePlaceholders(ubuntuInstallInstructions, edge);
+        ubuntuInstallInstructions = ubuntuInstallInstructions.replace("${BASE_URL}", request.getServerName());
+        String edgeVersion = appVersion.replace("-SNAPSHOT", "");
+        ubuntuInstallInstructions = ubuntuInstallInstructions.replace("${TB_EDGE_VERSION}", edgeVersion);
+        return new EdgeInstallInstructions(ubuntuInstallInstructions);
+    }
+
+
+    private EdgeInstallInstructions getCentosInstallInstructions(Edge edge, HttpServletRequest request) {
+        String centosInstallInstructions = readFile(resolveFile("centos", "instructions.md"));
+        centosInstallInstructions = replacePlaceholders(centosInstallInstructions, edge);
+        centosInstallInstructions = centosInstallInstructions.replace("${BASE_URL}", request.getServerName());
+        String edgeVersion = appVersion.replace("-SNAPSHOT", "");
+        centosInstallInstructions = centosInstallInstructions.replace("${TB_EDGE_VERSION}", edgeVersion);
+        return new EdgeInstallInstructions(centosInstallInstructions);
+    }
+
+    private String replacePlaceholders(String instructions, Edge edge) {
+        instructions = instructions.replace("${CLOUD_ROUTING_KEY}", edge.getRoutingKey());
+        instructions = instructions.replace("${CLOUD_ROUTING_SECRET}", edge.getSecret());
+        instructions = instructions.replace("${CLOUD_RPC_PORT}", Integer.toString(rpcPort));
+        instructions = instructions.replace("${CLOUD_RPC_SSL_ENABLED}", Boolean.toString(sslEnabled));
+        return instructions;
     }
 
     private String readFile(Path file) {
         try {
-            return new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
+            return Files.readString(file);
         } catch (IOException e) {
             log.warn("Failed to read file: {}", file, e);
             throw new RuntimeException(e);
